@@ -9,3 +9,4 @@ Changes since v1.0.2:
 - perf improvement when using List.toArray() by passing in
     an array of right size (Kevin Krouse)
 - fixed memory leak in CursorData (Cid Dennis/Kevin Krouse)
+- add option to pass in "##local" to -allowmdef (Ray Birklid/Radu Preotiuc)
